--- a/ShopManagement/ShopManagement.csproj
+++ b/ShopManagement/ShopManagement.csproj
@@ -147,6 +147,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App-Assests\CSS\Custom.css" />
+    <Content Include="App-Assests\CSS\Icons.css" />
     <Content Include="App-Assests\Js\Custom.js" />
     <Content Include="App-Assests\Js\Login.js" />
     <Content Include="App-Assests\Js\Order.js" />
@@ -876,6 +877,19 @@
     <Content Include="assets\modules\weather-icon\font\weathericons-regular-webfont.woff" />
     <Content Include="assets\modules\weather-icon\font\weathericons-regular-webfont.woff2" />
     <Content Include="assets\modules\weather-icon\font\weathericons-regular-webfontd41d.eot" />
+    <Content Include="ImageStorage\Icons\AddOrder.png" />
+    <Content Include="ImageStorage\Icons\AddPhoto.png" />
+    <Content Include="ImageStorage\Icons\AddShop.png" />
+    <Content Include="ImageStorage\Icons\AddUser.png" />
+    <Content Include="ImageStorage\Icons\Dashboard.png" />
+    <Content Include="ImageStorage\Icons\Gallery.png" />
+    <Content Include="ImageStorage\Icons\OrdersManagement.png" />
+    <Content Include="ImageStorage\Icons\ShopManagementLogo.jpg" />
+    <Content Include="ImageStorage\Icons\SlideManagement.png" />
+    <Content Include="ImageStorage\Icons\ViewAllShops.png" />
+    <Content Include="ImageStorage\Icons\ViewAllUsers.png" />
+    <Content Include="ImageStorage\Icons\ViewOrders.png" />
+    <Content Include="ImageStorage\ShopImage\Shop.png" />
     <Content Include="ImageStorage\UserImage\User.png" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -892,7 +906,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="ImageStorage\ShopImage\" />
+    <Folder Include="ImageStorage\Gallery\High\" />
+    <Folder Include="ImageStorage\Gallery\Low\" />
+    <Folder Include="ImageStorage\Gallery\Medium\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
